# addrnodeimport

./: CMakeLists.txt
config/: addrnodeimport-site-le-ssl.conf  addrnodeimport-site.conf  addrnodeimport.conf  nodes.sql  tables.sql
data/osm/: 0704.osm  0710.osm  1102.osm  1124.osm
debian/: addrnodeimport.cron.d  changelog  config  control  copyright  dirs  docs  init  install  links  postinst  postrm  preinst  prerm  rules  service  templates  upload_on_request.service
debian/po/: templates.pot
doc/: ved_kommunesammenslaaing.txt
python/: CMakeLists.txt  addrnodeimport  addrnodeimport.py  deletenotmatchednodes.py  doall.py  doall.sh  donextstep.py  find_splitted_housenumbers.py  kartverketadresser.lua  kommunenummer.py  mypasswords.py  polygon.txt  rest_simple_fetch.py  runselected.py  runselected2.sh  sosiaddr.py  testing.py  update_all.sh  update_on_request.py  updatetime.py  upload_on_request.py  upload_on_request_new.py  uploadall_between.py  uploadchanged.py  uploadmunip.py  uploadmunip_new.py
sh/: addrnodeimport_import_sql_backup  addrnodeimport_make_sql_backup  trigger_update.sh
src/: CMakeLists.txt  common.c  common.h  countnodes.c  fillinpostcode.c  fillinpostcodepoi.c  findchanged.c  getedges.c  getmissingandreport.c  osmosispolygon.c  universal.c
src/test_in/: 1121Adresser.osm  1931Adresser.osm  nodes_1121.osm  nodes_1931.osm  ways_1121.osm  ways_1931.osm
test/: Makefile
test/1/: Makefile  existingnodes.osm  existingways.osm  newnodes.osm  output.osm  response1-1.txt  response1-2.txt  response1-3.txt  response1-6.txt  runtest.sh
test/2/: corrections.xml  newnodes.osm  notmatched.osm  output.osm  response1-4.txt  veiveg.osm
web/: addrnodeimportstatus-old.php  addrnodeimportstatus.php  ajaxpublic.php  kommunenummer.php  mysql.php
xml/: corrections.xml
